@startuml
skinparam classAttributeIconSize 0
class Humain {
 -nom: string
    -prenom: string
    -dateNaissance: Date
    +Humain(nom: string, prenom: string, dateNaissance: Date)
    +getNom(): string
    +setNom(nom: string): void
    +getPrenom(): string
    +setPrenom(prenom: string): void
    +getDateNaissance(): Date
    +setDateNaissance(dateNaissance: Date): void
    +donneTexte(): string
}


Humain <|-- Joueur
class Joueur{
    -numero: int
    +Joueur(nom: string, prenom: string, dateNaissance: Date, numero: int, equipe: Equipe)
    +getNumero(): int
    +setNumero(numero: int): void
    +getEquipe(): Equipe
    +setEquipe(equipe: Equipe): void
    +donneTexte(): string
}





class Evenement{
    -horaire: datetime
    -description: string
    +Evenement(horaire: DateTime, description: string)
    +getHoraire(): DateTime
    +setHoraire(horaire: DateTime): void
    +getDescription(): string
    +setDescription(description: string): void
    +donneTexte(): string
}

Joueur "1 \n-joueurEntrant" <--x  Remplacement
Joueur "1 \n-joueurSortant" <--x  Remplacement
Evenement <|-- Remplacement
class Remplacement{

    +Remplacement(horaire: DateTime, description: string, joueurSortant: Joueur, joueurEntrant: Joueur)
    +getJoueurSortant(): Joueur
    +setJoueurSortant(joueurSortant: Joueur): void
    +getJoueurEntrant(): Joueur
    +setJoueurEntrant(joueurEntrant: Joueur): void
    +donneTexte(): string
}

Evenement <|-- FaitDeJeu
Joueur "1 \n-joueurAuteur" <--x  FaitDeJeu
class FaitDeJeu{
    +FaitDeJeu(horaire: DateTime, description: string, joueurAuteur: Joueur)
    +getJoueurAuteur(): Joueur
    +setJoueurAuteur(joueurAuteur: Joueur): void
    +donneTexte(): string
}

 FaitDeJeu <|-- Faute
Joueur "1 \n-joueurVictime" <--x  Faute
class Faute{
    -carton: string
    +Faute(horaire: DateTime, description: string, joueurAuteur: Joueur, joueurVictime: Joueur, carton: string)
    +getJoueurVictime(): Joueur
    +setJoueurVictime(joueurVictime: Joueur): void
    +getCarton(): string
    +setCarton(carton: string): void
    +donneTexte(): string
}


@enduml